--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,9 @@ dependencies {
     implementation 'com.mesibo.api:mesibo:1.5.2'
     implementation 'com.mesibo.api:ui:1.5.2'
     implementation 'com.mesibo.api:calls:1.5.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 }
