show profile done and several other changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hello"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.LoginActivity2"></activity>
+        <activity
+            android:name=".Activity.ShowProfile"
+            android:exported="false" />
+        <activity android:name=".Activity.LoginActivity2" />
         <activity android:name=".Activity.StatusActivity" />
 
         <service
@@ -35,9 +38,7 @@
             android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".Activity.PhoneActivity"
-            android:windowSoftInputMode="stateVisible" >
-
-        </activity>
+            android:windowSoftInputMode="stateVisible" />
         <activity android:name=".Activity.Sign_up" />
         <activity android:name=".Activity.Loginactivity" />
         <activity android:name=".Activity.MainActivity">
@@ -46,21 +47,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <receiver android:name=".AlarmRecevier"/>
 
+        <receiver android:name=".AlarmRecevier" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
-     See README(https://goo.gl/l4GJaQ) for more. -->
+        <!--
+ Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_favicon" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
