--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,7 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation "androidx.work:work-runtime:2.3.1"
+    implementation 'com.github.aabhasr1:OtpView:v1.1.2'
+
 }
 apply plugin: 'com.google.gms.google-services'
