--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation "androidx.work:work-runtime:2.3.1"
     implementation 'com.github.aabhasr1:OtpView:v1.1.2'
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
+    implementation 'jp.co.cyberagent.android:gpuimage:2.0.4'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
