--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hello">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -10,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hello"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Activity.ViewImageActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.GroupInfoActivity"
             android:exported="false" />
@@ -33,9 +37,9 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Activity.GroupChatActivity"
-            android:theme="@style/Theme.Hello.NoActionBar"
-            />
+        <activity
+            android:name=".Activity.GroupChatActivity"
+            android:theme="@style/Theme.Hello.NoActionBar" />
         <activity
             android:name=".Activity.ChatActivity"
             android:theme="@style/Theme.Hello.NoActionBar" />
